turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:17: error: not found: value leveBrosse
	leveBrosse()
        ^Source:20: error: not found: value baisseBrosse
	baisseBrosse()
        ^