turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {
	for (i <- 1 to 4){
	avance(30)
	droite(30)
	for (i <- 1 to 3){
		avance(30)
		gauche(240)
	}
	droite(60)
	for (i <- 1 to 3){
		avance(30)
		droite(90)
	}
	droite(90)
	avance(30)
	leveBrosse()
	avance(20)
	gauche(90)
	baisseBrosse()
	}	
}
